[tool.poetry]
name = "wallet-backend"
version = "0.1.0"
description = ""
authors = ["Dat Nguyen Ngoc <datnn@smartosc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
requests = "^2.31.0"
fastapi-sessions = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
