[tool.poetry]
name = "wallet-backend"
version = "0.1.0"
description = ""
authors = ["Dat Nguyen Ngoc <datnn@smartosc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
requests = "^2.31.0"
fastapi-sessions = "^0.3.2"
qrcode = "^7.4.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.1"
psycopg2 = "^2.9.9"
jose = "^1.0.0"
python-jose = "^3.3.0"
segno = "^1.5.3"
pyotp = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
